gedit 0.9.0 (Jul 09, 2000)

gedit is a light text editor for the Gnome desktop.

Download at :
http://sourceforge.net/project/filelist.php?group_id=7

What's new :

Bugs
        - Lots and lots of bug fixes

Webpage
	- New webpage ( Steve Hall )

Printing
        - Printing now supports print selection

Plugins
        - Plugin Manager
        - New plugins
              - Shell Output ( Roberto Majadas )
              - Reverse (Roberto Majadas )

Menu/Toolbar
        - Menu & Toolbar items change sensitivity
        when the commands are available/not available.              

Documentation 
        - New documentation by :
         Eric Baudais <baudais@okstate.edu>

------------------------------------------------------
gedit 0.9.0-pre2 (Jul 04, 2000)

gedit 0.9.0-pre2 is now available.
gedit is a light text editor for the Gnome desktop.

Download at :
http://sourceforge.net/project/filelist.php?group_id=7

What's new :

Bugs
        - Lots and lots of bug fixes

Webpage
	- New webpage ( Steve Hall )

Printing
        - Printing now supports print selection

Plugins
        - Plugin Manager
        - New plugins
              - Shell Output ( Roberto Majadas )
              - Reverse (Roberto Majadas )

Menu/Toolbar
        - Menu & Toolbar items change sensitivity
        when the commands are available/not available.              

Documentation 
        - New documentation by :
         Eric Baudais <baudais@okstate.edu>
         (I was unable to update it with the 
         latest version, an updated version will
         be shipped with 0.9.0 )

------------------------------------------------------

gedit 0.7.9 (June 11, 2000)

gedit 0.7.9 is now available.
gedit is a light text editor for the Gnome desktop.

Download at :
http://download.sourceforge.net/gedit/gedit-0.7.9.tar.gz

    New Features & Improvements

	* Pipes ( Roberto )
		- gedit now accepts pipes so it can be used in
		several new ways.  i.e. "ls | gedit"

    	* Printing ( Chema )