@@ -5,6 +5,9 @@ gedit is a light text editor for the Gnome desktop.
 Download at :
 http://sourceforge.net/project/filelist.php?group_id=7
 
+Webpage :
+http://gedit.sourceforge.net
+
 What's new :
 
 Bugs
